<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_recent"
        android:icon="@drawable/recent"
        android:title="@string/title_recent" />

    <item
        android:id="@+id/navigation_upcoming"
        android:icon="@drawable/sdf"
        android:title="@string/title_upcoming" />

    <item
        android:id="@+id/navigation_poll"
        android:icon="@drawable/poll"
        android:title="@string/title_poll" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/more"
        android:title="@string/title_more" />

</menu>
