<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.T20_A">
    <LinearLayout
        android:padding="5dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/batsmen_tv"
            android:background="@drawable/tablayoutbackground"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/batsmen"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/bowlers_tv"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/bowlers"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/all_rounder_tv"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/all_rounders"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/teams_tv"
            android:textColor="@color/colorBlack"
            android:padding="7dp"
            android:gravity="center"
            android:text="@string/teams"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <RelativeLayout
        android:background="@color/colorLightGrey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:paddingStart="20dp"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:padding="7dp"
            android:id="@+id/rankin_col"
            android:text="@string/rank"
            android:layout_width="70dp"
            android:layout_height="wrap_content" />
        <TextView
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_toEndOf="@+id/rankin_col"
            android:layout_toStartOf="@+id/rate_col"
            android:id="@+id/player_col"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:padding="7dp"
            android:text="@string/player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/rate_col"
            android:layout_toStartOf="@+id/point_col"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:padding="7dp"
            android:text="Rating"
            android:layout_width="80dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/point_col"
            android:paddingEnd="20dp"
            android:layout_alignParentEnd="true"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:padding="7dp"
            android:gravity="center"
            android:text="@string/points"
            android:layout_width="80dp"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <android.support.v7.widget.RecyclerView
        android:paddingBottom="20dp"
        android:id="@+id/t20_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>
</LinearLayout>