<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activitys.Ranking">

    <android.support.design.widget.AppBarLayout
        app:elevation="6dp"
        android:background="@drawable/backgroundgradient"
        android:id="@+id/ranking_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <android.support.v7.widget.Toolbar
            app:layout_scrollFlags="scroll|enterAlways"
            android:id="@+id/ranking_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.Toolbar>
        <android.support.design.widget.TabLayout
            app:tabIndicatorColor="@null"
            android:clipToPadding="false"
            app:tabIndicator="@null"
            app:tabGravity="fill"
            app:tabPaddingStart="10dp"
            app:tabPaddingEnd="10dp"
            app:tabSelectedTextColor="@color/colorPrimaryDark"
            app:tabTextColor="@color/colorGrey"
            android:id="@+id/ranking_tablayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:visibility="gone"
            android:padding="5dp"
            android:background="@color/colorWhite"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/batsmen_tv"
                android:background="@drawable/tablayoutbackground"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:padding="7dp"
                android:text="@string/batsmen"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/bowlers_tv"
                android:textColor="@color/colorBlack"
                android:gravity="center"
                android:padding="7dp"
                android:text="@string/bowlers"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/all_rounder_tv"
                android:textColor="@color/colorBlack"
                android:gravity="center"
                android:padding="7dp"
                android:text="@string/all_rounders"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/teams_tv"
                android:textColor="@color/colorBlack"
                android:padding="7dp"
                android:gravity="center"
                android:text="@string/teams"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <RelativeLayout
            android:visibility="gone"
            android:background="@color/colorLightGrey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:paddingStart="20dp"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:padding="7dp"
                android:id="@+id/rankin_col"
                android:text="@string/rank"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />
            <TextView
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_toEndOf="@+id/rankin_col"
                android:layout_toStartOf="@+id/rate_col"
                android:id="@+id/player_col"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:padding="7dp"
                android:text="@string/player"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/rate_col"
                android:layout_toStartOf="@+id/point_col"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:gravity="center"
                android:padding="7dp"
                android:text="Rating"
                android:layout_width="80dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/point_col"
                android:paddingEnd="20dp"
                android:layout_alignParentEnd="true"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:padding="7dp"
                android:gravity="center"
                android:text="@string/points"
                android:layout_width="80dp"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/ranking_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


</android.support.design.widget.CoordinatorLayout>